# SeleniumAction

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  test_web01.py
.github/workflows/: main.yaml
seleniumaction/: __init__.py
seleniumaction/templates/: index.jinja2
tests/: test_web01.py
