[tool.poetry]
name = "seleniumaction"
version = "0.1.0"
description = ""
authors = ["PythonFZ <fabian.zills@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
Flask = "^3.0.0"
Flask-SocketIO = "^5.3.6"
eventlet = "^0.33.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
